<resources>
    <string name="app_name">CityCube</string>
    <string name="api_key">AIzaSyAXTJrvnDTC8AjYzK2dPatsSAMJaTIc-c0</string>
    <string name="following">Following</string>
    <string name="continue_with_email">Continue With Email</string>
    <string name="welcome_to">Welcome To</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="email">E - mail</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_started">Get Started</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="please_login_to_continue_app">Please login to continue app</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="the_courier_will_look_for_n_your_order_and_deliver_it_to_n_you_in_minutes">The courier will look for <br />your order and deliver it to <br />you in minutes</string>
    <string name="start_by_defining_a_delivery_n_address">Start by defining a delivery<br /> address</string>
    <string name="add_location">Add Location</string>
    <string name="location_pinning">Location pinning</string>
    <string name="departure_address">Departure Address</string>
    <string name="arrieval_address">Arrieval Address</string>
    <string name="continue1">Continue</string>
    <string name="ride_history">Ride history</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="heavy_vehicle">Heavy Vehicle</string>
    <string name="numbers_of_passengers">Number of passengers</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="reversation">Reservation</string>
    <string name="contact_info">Contact Info</string>
    <string name="name">Name</string>
    <string name="parcel_receiver_info">Parcel Receiver Info</string>
    <string name="handling_service">Handling service</string>
    <string name="payment_option">Payment Option</string>
    <string name="pay_on_visit">Pay on Visit(Cash)</string>
    <string name="pay_on_card">Pay by Card</string>
    <string name="bill_details">Bill Details</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="order_history">Order History</string>
    <string name="log_out">Log out</string>
    <string name="general">General</string>
    <string name="notification">Notification</string>
    <string name="leave_a_rating_to_help_us_improve">Leave a rating to, help us improve!</string>
    <string name="my_profile">My Profile</string>
    <string name="promotion">Promotion</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="package_cost">Package Cost</string>
    <string name="to_pay">To pay</string>
    <string name="share_citycube_with_your_friends_and_earn_n_rewards_when_they_join">Share citycube with your friends and earn<br /> rewards when they join</string>
    <string name="share_with_your_friends">Share with your friends</string>
    <string name="redem_discounts_and_ride_credits">Redem discounts and ride credits</string>
    <string name="enter_the_promo_code">Enter The Promo Code</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="password_does_not_matched">Password doesn\'t matched</string>
    <string name="please_enter_confirm_pass">PLease enter confirm password</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_mobile_number">Please enter phone number</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="wrong_email">Can\'t enter worng email.</string>
    <string name="please_wait">Please wait...</string>
    <string name="network_failure">Sorry! Not connected to internet</string>
    <string name="thank_you_for_signing_up">Thank you for signing up!</string>
    <string name="sign_in_successful">Login successful!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_image_from">Select image from</string>
    <string name="send">Send</string>
    <string name="forgotpasswordtext">Please, enter your email address. You will
       <br /> receive a link to create a new password via <br /> email. </string>
    <string name="link_send_successfully_your_email">Link successfully send your email</string>
    <string name="small">small</string>
    <string name="classic">CLASSIC</string>
    <string name="large">LARGE</string>
    <string name="jumbo">JUMBO</string>
    <string name="please_choose_vehicle">Please choose vehicle</string>
    <string name="transport_only">transport only</string>
    <string name="driver_handler">driver handler</string>
    <string name="two_handlers">2 handlers</string>
    <string name="sidewalk_to_sidewalk">Sidewalk to sidewalk</string>
    <string name="max_30_kg_per_object">Max 1.5m or 30kg per object</string>
    <string name="option_not_available_with_selected_vehicle">Option not available with selected vehicle</string>
    <string name="max_90_kg_per_object">Max 90kg per object</string>
    <string name="select_option_you_need">Select the option you need</string>
    <string name="loading_unloading_time">Loading / unloading time</string>
    <string name="text_for_loading1">You have 20 min included in loading + unloading (in total), beyond this handling time will be invoiced </string>
    <string name="text_for_loading2">Do you already think you need more time? say it with the ruler! Your estimate will be closer to your final invoice! Travel time is already included in the price. Additional time booked will be due in full.</string>
    <string name="text_for_loading3">You have included in loading + unloading (in total), beyond this waiting time will be charged  € / min . Do you already think you need more time? say it with the ruler! Your estimate will be closer to your final invoice! Travel time is already included in the price. Additional time booked will be due in full.</string>
    <string name="your_contact_detail">Your contact details</string>
    <string name="would_you_like_to_travel_with_the_driver">Would you like to travel with the driver?</string>
    <string name="no_passenger">no <br>passenger</br></string>
    <string name="one_passenger">1 <br>passenger</br></string>
    <string name="two_passenger">2 <br>passenger</br></string>
    <string name="who_will_be_present_at_the_start_end_finish_the_race">Who will be present at the start and finish  of the race?</string>
    <string name="departure">departure</string>
    <string name="me">Me</string>
    <string name="other">Other</string>
    <string name="contact_name">Contact Name</string>
    <string name="arrival">arrival</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_starting_contact">Please enter an exact mobile number for the starting contact.</string>
    <string name="please_enter_arrival_contact">Please enter an exact mobile number for the arrival contact.</string>
    <string name="select_passenger">Please select passenger</string>
    <string name="tell_us_what_you_want_to_transport">Tell us what you want to transport</string>
    <string name="one_sofa_ten_boxes">1 sofa, 10 boxes</string>
    <string name="further_information">Further information</string>
    <string name="place_api_key">AIzaSyC4Eg_qGdkZrcW-td6QsmJAk2g4nzPaat0</string>
    <string name="please_enter_departure_location">Please enter departure address</string>
    <string name="please_enter_arrival_location">Please enter arrival address</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_time">Please select time</string>
    <string name="please_select_handling_service">Please select handling service</string>
    <string name="pay">Pay</string>
    <string name="twenty_minut_free">20 minutes \nfree</string>
    <string name="please_enter_what_you_want_to_transport">What you want to transport</string>
    <string name="request_send_successfully">Booking request send successfully.</string>
    <string name="total_price">Total Price</string>
    <string name="order_detail">Order detail</string>
    <string name="booking_accept_by_driver">Booking accepted by driver.</string>
    <string name="no_booking_available">No booking available</string>
    <string name="invoice">Invoice</string>
    <string name="where_i_m_going">Where I am going</string>
    <string name="recipient_with_the_delivery_location_address">Recipient with the delivery location address</string>
    <string name="cancelled">Cancelled</string>
    <string name="my_bookings">My Bookings</string>
    <string name="active">Active</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="type_msg">Type message</string>
    <string name="new_chat_msg_provider">New message from driver</string>
    <string name="driver_start_the_run">Driver has  started the run. he is on the way</string>
    <string name="driver_arrived_driver_location">Driver arrived departure location.</string>
    <string name="run_finish">Run finish</string>
    <string name="booking_cancel_by_driver">Run cancel by driver</string>
    <string name="ok">Ok</string>
    <string name="loading_completed">Loading completed</string>
    <string name="unloading_completed">Unloading completed. Please rate the driver</string>
    <string name="rating_note">Rate your Driver</string>
    <string name="write_your_review">Write your review.</string>
    <string name="rate_successful">Rate successfully</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="please_select_another_day_because_sunday_is_off">Please select another day because sunday is off</string>
    <string name="booking_not_allowed_at_this_time">Booking not allowed at this time</string>
    <string name="note">Note :</string>
    <string name="note1">1. Orders are accepted Monday to Saturday 07:00 AM - 09:00 PM</string>
    <string name="note2">2. Trasports between 06:00 AM - 08:00 AM and 07:00 PM - 09:00 PM we will charge 20% more</string>
    <string name="note3">3. Orders have to be placed at least 90 mins in advance</string>
    <string name="note4">4. Orders of more than 500km have to be placed 24h in advance</string>
    <string name="note33">Orders have to be placed at least 90 mins in advance</string>
    <string name="note5">Orders of more than 500km have to be placed 24h in advance</string>
    <string name="pay_now">Pay Now</string>
    <string name="card_not_valid">Card Not Valid</string>
    <string name="please_complete_form">Please complete the form</string>
</resources>