<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReservationActivity"
    android:orientation="vertical"
    android:background="@color/bg_color"
    >

    <include
        android:id="@+id/reservation_toolbar"
        layout="@layout/toolbar"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        >


       <!-- <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Feb 2020"
            android:fontFamily="@font/balootamma2_regular"
            android:textSize="@dimen/_25sdp"
            android:gravity="center_vertical"
            android:textColor="@color/green"
            android:visibility="gone"
            />
        <CalendarView
            android:id="@+id/simpleCalendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_bg_5"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:fontFamily="@font/balootamma2_semibold"
            android:textSize="@dimen/_15sdp"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cvSpinner"
            android:layout_marginTop="@dimen/_10sdp"
            >
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/white_bg_5"
                >
                <Spinner
                    android:id="@+id/spinnerTime"
                    android:layout_height="@dimen/_37sdp"
                    android:layout_width="match_parent"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>-->


        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balootamma2_semibold"
            android:gravity="center_vertical"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:text="@string/select_date"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/balootamma2_semibold"
            android:gravity="center_vertical"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:text="@string/select_time"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/gray" />





        <RelativeLayout
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_circular_bg"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue1"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/balootamma2_semibold"
                />
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_white_right"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/balootamma2_semibold"
            android:gravity="center_vertical"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:text="@string/note"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:fontFamily="@font/balootamma2_semibold"
            android:gravity="center_vertical"
            android:lineSpacingExtra="-5dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:singleLine="false"
            android:text="@string/note1"
            android:textColor="@color/dark_red"
            android:textStyle="bold"
            android:textSize="@dimen/_11sdp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:fontFamily="@font/balootamma2_semibold"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:singleLine="false"
            android:lineSpacingExtra="-5dp"
            android:text="@string/note2"
            android:textColor="@color/dark_red"
            android:textStyle="bold"
            android:textSize="@dimen/_11sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:fontFamily="@font/balootamma2_semibold"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:singleLine="false"
            android:lineSpacingExtra="-5dp"
            android:text="@string/note3"
            android:textColor="@color/dark_red"
            android:textStyle="bold"
            android:textSize="@dimen/_11sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:fontFamily="@font/balootamma2_semibold"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:singleLine="false"
            android:lineSpacingExtra="-5dp"
            android:text="@string/note4"
            android:textColor="@color/dark_red"
            android:textStyle="bold"
            android:textSize="@dimen/_11sdp"/>


    </LinearLayout>

</LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>