<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ChangePasswordFragment"
        android:orientation="vertical"
        >

        <include
            android:id="@+id/reservation_toolbar"
            layout="@layout/toolbar"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/old_password"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:background="@drawable/light_gray_stroke_bg"
            android:padding="@dimen/_15sdp"
            android:fontFamily="@font/balootamma2_regular"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_10sdp"
            />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:drawableLeft="@mipmap/password"
                android:drawablePadding="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/light_gray_stroke_bg"
                android:padding="@dimen/_15sdp"
                android:fontFamily="@font/balootamma2_regular"
                android:imeOptions="actionNext"
                android:layout_marginTop="@dimen/_10sdp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/new_password"
                android:drawableLeft="@mipmap/password"
                android:drawablePadding="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/light_gray_stroke_bg"
                android:padding="@dimen/_15sdp"
                android:fontFamily="@font/balootamma2_regular"
                android:imeOptions="actionNext"
                android:layout_marginTop="@dimen/_10sdp"
                />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_circular_bg"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingHorizontal="@dimen/_20sdp"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_15sdp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/balootamma2_semibold"
                />
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_white_right"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

    </LinearLayout>
</layout>