<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/reservation_toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balootamma2_regular"
            android:text="@string/tell_us_what_you_want_to_transport"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"/>

           <EditText
               android:id="@+id/etDelivery"
               android:layout_width="match_parent"
               android:layout_height="@dimen/_100sdp"
               android:layout_marginLeft="@dimen/_10sdp"
               android:layout_marginRight="@dimen/_10sdp"
               android:layout_marginTop="@dimen/_10sdp"
               android:background="@drawable/light_gray_stroke_bg"
               android:hint="@string/one_sofa_ten_boxes"
               android:gravity="left|top"
               android:padding="@dimen/_10sdp"
               android:textColor="@color/black"
               android:fontFamily="@font/balootamma2_regular"
               android:textSize="@dimen/_12sdp"
               />



        <RelativeLayout
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/blue_circular_bg"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balootamma2_semibold"
                android:text="@string/continue1"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_white_right" />

        </RelativeLayout>


    </LinearLayout>

</layout>