<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_color"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:orientation="vertical"
            android:background="@color/yellow"
            >
            <RelativeLayout
                android:id="@+id/rlEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:src="@drawable/logo"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carson"
                android:fontFamily="@font/baloo_bold"
                android:layout_marginLeft="@dimen/_25sdp"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="carson@mobility.com"
                android:fontFamily="@font/balootamma2_regular"
                android:layout_marginLeft="@dimen/_25sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/_40sdp"
            >
<ImageView
    android:id="@+id/ivHome"
    android:layout_width="@dimen/_20sdp"
    android:layout_height="@dimen/_20sdp"
    android:background="@drawable/ic_home"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/ivHome"
                android:textSize="@dimen/_14sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/balootamma2_medium"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlMyProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/_15sdp"
            >
            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_my_profile"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/ivProfile"
                android:textSize="@dimen/_14sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/balootamma2_medium"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlOrderHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/_15sdp"
            >
            <ImageView
                android:id="@+id/ivOrderHistory"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_my_ride"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_toRightOf="@id/ivOrderHistory"
                android:fontFamily="@font/balootamma2_medium"
                android:text="@string/my_bookings"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlPromotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/_15sdp"
            >
            <ImageView
                android:id="@+id/ivPromotion"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_promotion"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_toRightOf="@id/ivPromotion"
                android:fontFamily="@font/balootamma2_medium"
                android:text="@string/promotion"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/_15sdp"
            >
            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_share"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/ivShare"
                android:textSize="@dimen/_14sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/balootamma2_medium"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_40sdp"
            >
            <ImageView
                android:id="@+id/ivLogout"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_logout"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/ivLogout"
                android:textSize="@dimen/_14sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/balootamma2_medium"
                />
        </RelativeLayout>

    </LinearLayout>
</layout>